force-app/main/default/objects/Quiz_Response__c/Quiz_Response__c.object-meta.xml
<CustomObject>
    <label>Response Line Items</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Quiz Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>