force-app/main/default/objects/Quiz_Response__c/fields/CheckList_Response__c.field-meta.xml
<CustomField>
    <fullName>CheckList_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CheckList Response</label>
    <referenceTo>Questions__c</referenceTo>
    <relationshipLabel>Response Line Items</relationshipLabel>
    <relationshipName>Quiz_Response</relationshipName>
    <type>Lookup</type>
</CustomField>