force-app/main/default/objects/Quiz_Response__c/fields/Course_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Course_Sessions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Sessions</label>
    <referenceTo>Course_Sessions__c</referenceTo>
    <relationshipName>Quiz_Response</relationshipName>
    <type>Lookup</type>
</CustomField>