force-app/main/default/objects/Quiz_Response__c/fields/Point_Scored__c.field-meta.xml
<CustomField>
    <fullName>Point_Scored__c</fullName>
    <label>Point Scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>