force-app/main/default/objects/Quiz_Response__c/fields/Question_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Question_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Line Item</label>
    <referenceTo>Question_Line_Item__c</referenceTo>
    <relationshipLabel>Quiz Response</relationshipLabel>
    <relationshipName>Quiz_Response</relationshipName>
    <type>Lookup</type>
</CustomField>