force-app/main/default/objects/Quiz_Response__c/fields/Question_New__c.field-meta.xml
<CustomField>
    <fullName>Question_New__c</fullName>
    <formula>Question_Line_Item__r.Question__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question</label>
    <type>Text</type>
</CustomField>