force-app/main/default/objects/Quiz_Response__c/fields/Question_Template__c.field-meta.xml
<CustomField>
    <fullName>Question_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Template</label>
    <referenceTo>Question_Template__c</referenceTo>
    <relationshipLabel>Quiz Response</relationshipLabel>
    <relationshipName>Quiz_Response</relationshipName>
    <type>Lookup</type>
</CustomField>