force-app/main/default/objects/Quiz_Response__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>