force-app/main/default/objects/Quiz_Response__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Response Line Items</relationshipLabel>
    <relationshipName>Response_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>